force-app/main/default/objects/Tier_Mapping__mdt/Tier_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Maps legacy tier codes from external systems (Epsilon, RCC, historical exports) to canonical Salesforce Loyalty Cloud tier names. Queried by TierMappingService.</description>
    <label>Tier Mapping</label>
    <pluralLabel>Tier Mappings</pluralLabel>
</CustomObject>