force-app/main/default/objects/Tier_Mapping__mdt/fields/Canonical_Tier__c.field-meta.xml
<CustomField>
    <fullName>Canonical_Tier__c</fullName>
    <description>The canonical Loyalty Cloud tier name this legacy code maps to (e.g., "Elite", "Preferred").</description>
    <label>Canonical Tier</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>