force-app/main/default/objects/Tier_Mapping__mdt/fields/Legacy_Code__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Code__c</fullName>
    <description>The legacy tier code as it appears in external system exports (e.g., "Upper", "Base", "Pro_Elite").</description>
    <label>Legacy Code</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>