force-app/main/default/objects/Tier_Mapping__mdt/fields/Member_Type__c.field-meta.xml
<CustomField>
    <fullName>Member_Type__c</fullName>
    <description>The member type segment this mapping applies to (Retail, Pro, Student, or blank for all).</description>
    <label>Member Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>