force-app/main/default/objects/Tier_Mapping__mdt/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <description>Numeric rank used for tier progression comparisons (higher = better tier).</description>
    <label>Sort Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>